[package]
name = "pathnynj-gtfs-realtime"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.18"
gtfs-realtime = "0.2.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
regex = "1.10"
